# Ink-Gateway

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  engine.py  install.sh
.github/workflows/: ci.yml  release.yml
Requirements/: agentic-architecture.md  cost-analysis.md  framework.md  roadmap.md  writing_engine.md
deploy/: setup.md
src/: book.rs  config.rs  context.rs  git.rs  init.rs  main.rs  maintenance.rs  mcp_server.rs  state.rs
templates/: AGENTS.md  Chapter_01.md  Characters.md  Config.yml  Lore.md  Outline.md  README.md  Soul.md  current.md
