[package]
name = "ink-cli"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "ink-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.4"
regex = "1.10"
anyhow = "1.0"
dialoguer = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
