[package]
name = "ink-cli"
version = "2026.2.28-3"
edition = "2021"

[[bin]]
name = "ink-cli"
path = "src/main.rs"

[[bin]]
name = "ink-gateway-mcp"
path = "src/mcp_server.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
anyhow = "1.0"
inquire = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
